fixed z-index

--- a/src/Pyz/Yves/ProductDetailPage/Theme/default/components/molecules/product-carousel/product-carousel.scss
+++ b/src/Pyz/Yves/ProductDetailPage/Theme/default/components/molecules/product-carousel/product-carousel.scss
@@ -122,7 +122,7 @@
                     right: 0;
                     bottom: 0;
                     background: $setting-color-alpha-3;
-                    z-index: 350;
+                    z-index: $setting-zi-carousel + 3;
                 }
             }
 
